# JWT/docs/swagger.yaml
@@ -16,8 +16,6 @@ definitions:
         type: string
       password:
         type: string
-      refreshToken:
-        type: string
     type: object
   models.User:
     properties:
@@ -34,7 +32,7 @@ definitions:
       phone:
         type: string
       refresh_token:
-        type: boolean
+        type: string
       username:
         type: string
     type: object
@@ -146,9 +144,11 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: token and refresh token
           schema:
-            type: string
+            additionalProperties:
+              type: string
+            type: object
       summary: Update user with specific id
       tags:
       - user
@@ -174,6 +174,29 @@ paths:
       summary: Register user
       tags:
       - user
+  /token/refresh:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: Refresh the access token using a valid refresh token
+      parameters:
+      - description: Refresh Token
+        in: formData
+        name: refresh_token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: access_token
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Refresh token
+      tags:
+      - token
   /user/{id}:
     delete:
       consumes:
@@ -259,6 +282,33 @@ paths:
           schema:
             $ref: '#/definitions/models.User'
       summary: Get user by email
+      tags:
+      - users
+  /user/email/{email}/password:
+    post:
+      consumes:
+      - application/json
+      description: Update user password by email
+      parameters:
+      - description: User Email
+        in: path
+        name: email
+        required: true
+        type: string
+      - description: New Password
+        in: body
+        name: password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Password updated successfully
+          schema:
+            type: string
+      summary: Update user password by email
       tags:
       - users
   /users:
