# JWT/models/loginData.go
@@ -1,7 +1,6 @@
 package models
 
 type LoginData struct {
-	Email        string `json:"email"`
-	Password     string `json:"password"`
-	RefreshToken string `json:"refreshToken"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
 }
