# JWT/routes/login/login.go
@@ -19,7 +19,7 @@ import (
 // @Param        request body models.LoginData true "Login data"
 // @Accept       json
 // @Produce      application/json
-// @Success      200 {string} string
+// @Success      200 {object} map[string]string "token and refresh token"
 // @Router       /login [post]
 func Login(c *gin.Context) {
 	var loginData models.LoginData
@@ -39,7 +39,6 @@ func Login(c *gin.Context) {
 		return
 	}
 
-	// Compare the password with the hashed password function is in util folder hash.go
 	if !util.ComparePassword(user.Password, loginData.Password) {
 		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid email or password"})
 		return
@@ -47,35 +46,24 @@ func Login(c *gin.Context) {
 
 	fmt.Println(loginData)
 
-	//If the user has a refresh token then create a acess token otherwise make both if login credentials are correct
-	if user.RefreshToken {
-		token, err := util.CreateToken(user.Name, user.Email, user.Phone, user.Username, user.ID, user.RefreshToken)
-		if err != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create token"})
-			return
-		}
-		c.JSON(http.StatusOK, gin.H{"token": token})
-
-	} else {
-		refreshToken, err := util.CreateRefreshToken(user.Name, user.ID)
-		if err != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create refresh token"})
-			return
-		}
-
-		user.RefreshToken = true
-
-		if err := db.DB.Db.Save(&user).Error; err != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to update user data"})
-			return
-		}
-
-		token, err := util.CreateToken(user.Name, user.Email, user.Phone, user.Username, user.ID, user.RefreshToken)
-		if err != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create token"})
-			return
-		}
-
-		c.JSON(http.StatusOK, gin.H{"token": token, "refreshToken": refreshToken})
+	refreshToken, err := util.CreateRefreshToken(user.Name, user.ID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create refresh token"})
+		return
 	}
+
+	user.RefreshToken = refreshToken
+	if err := db.DB.Db.Save(&user).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to update user data"})
+		return
+	}
+
+	token, err := util.CreateToken(user.Name, user.Email, user.Phone, user.Username, user.ID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create token"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"token": token, "refreshToken": refreshToken})
+	fmt.Println("Refresh Token: " + refreshToken)
 }
