# JWT/routes/token/route.go
@@ -1,0 +1,10 @@
+package routes
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+func GetNewTokenRoutes(r *gin.Engine) {
+	r.POST("/token/refresh", RefreshToken)
+
+}
